fixed button size on small screen

--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -16,9 +16,12 @@
     margin-left: calc(30px + 15%);
 }
 @media (max-width: 680px) {
-.btn-action.left {
-    margin-left: 30px;
-}
+    .btn-action.left {
+        margin-left: 30px;
+    }
+    .btn-action {
+        padding: 15px 30px;
+    }
 }
 .btn-action:hover {
     background: #df3030;
